src/main/k8s/zookeeper-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: zookeeper
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: zookeeper
          image: zookeeper:3.6.1
          ports:
            - containerPort: 2181
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "export ZOO_MY_ID=${HOSTNAME##*-}"
