src/main/k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  labels:
    app: kafka-broker
spec:
  type: NodePort
  ports:
    - port: 9092
      name: kafka-port
      protocol: TCP
      nodePort: 9092
  selector:
    app: kafka-broker
